# jobsc

./: .cursorrules  Potential Companies for Identifying ICP.xlsx  README.md  TEST_UPDATES.md  alembic.ini  demo_smart_filtering.py  feeds.yml  indeed_sample.html  jobs.db  mock_jobs.json  projectrules  proxies.txt  pyproject.toml  pytest.ini  remotive_sample.html  test_jobspresso_direct.py
alembic/: env.py
alembic/versions/: c1687ac52920_update_jobs_table_schema_to_match_.py
debug/: angellist_content.html  glassdoor_content.html  indeed_content.html  jobspresso_content.html  linkedin_content.html  nodesk_substack_content.html  remote3_content.html  remotive_content.html  snaphunt_content.html  test_cryptojobslist_content.html  test_headless_content.html  test_indeed_content.html  test_jobspresso_content.html  test_remoteok_content.html  test_remotive_content.html  test_workingnomads_content.html  workingnomads_content.html
docs/: TDD_GUIDE.md
jobradar/: __init__.py  __main__.py  cli.py  config.py  core.py  database.py  db.py  error_handling.py  fetchers.py  filters.py  models.py  rate_limiter.py  relevant_job_titles.csv  security.py  smart_matcher.py
jobradar/delivery/: __init__.py
jobradar/domain/: __init__.py  deduplication.py  job.py  matching.py
jobradar/fetchers/: __init__.py  base_fetcher.py  browser_pool.py  (+2 more)
tests/: test_all_components.py  test_browser_pool.py  test_cli_integration.py  test_comprehensive_tdd.py  test_comprehensive_tdd_new.py  test_config.py  test_database.py  test_db.py  test_ddt_comprehensive.py  test_error_handling.py  test_expired_job_dropped.py  test_fetchers.py  test_fetchers_module.py  test_filters.py  test_fuzzy_deduplication.py  test_global_rate_limiter.py  test_headless.py  test_ingest.py  test_metrics.py  test_models_validation.py  test_notifiers.py  test_proxy_manager.py  test_rate_limiter.py  test_rate_limiter_ddt.py  test_robust_parsers.py  test_security_challenges.py  test_smart_matcher.py  test_tdd_comprehensive.py  test_web_api_complete.py
(+20 files in other folders)
