[project]
name = "jobradar"
version = "0.1.0"
description = "Job listing aggregator"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.23",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
jobradar = "jobradar.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "requests-mock"
]

[tool.pytest.ini_options]
addopts = "-q" 